# mldr-project-ms2381

./: .env.sample  .gitignore  Dockerfile  WA_Fn-UseC_-Telco-Customer-Churn.csv.dvc  analyse.py  docker-compose.yml  dvc.yaml  instructions.md  linearregression.py  memo.md  pyproject.toml  rag.py  run_xgboost.py  train.py
.dvc/: config
data/: WA_Fn-UseC_-Telco-Customer-Churn.csv.dvc  data.csv.dvc  data2.csv.dvc
metrics/: linear_regression.json  xgboost.json
