[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # LLM
    "ollama>=0.4",

    # Data versioning
    "dvc[s3]>=3.0",

    # ML core
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "xgboost>=3.2.0",

    # Utilities
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "tqdm>=4.66",
]
